--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -46,12 +46,16 @@ jobs:
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.21'
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
       - name: Setup Hugo Modules
         run: |
-          hugo mod init github.com/ongxeno/star-citizen-handbook
-          hugo mod get -u github.com/google/docsy@v0.7.1
+          rm -rf themes
+          hugo mod get -u
           hugo mod tidy
       - name: Build with Hugo
         env:
