Update Hugo workflow and gitignore for theme handling

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ package-lock.json
 .hugo_build.json
 
 # Theme files (manage these with Hugo modules)
-themes/
+themes/*
+!themes/docsy
 
 # Hugo cache and temporary files
 .cache/
