--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -52,9 +52,14 @@ jobs:
           go-version: '1.21'
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
       - name: Setup Hugo theme
         run: |
-          git submodule add --depth 1 https://github.com/google/docsy.git themes/docsy
+          mkdir -p themes
+          git clone --depth 1 https://github.com/google/docsy.git themes/docsy
           cd themes/docsy
           npm install
           cd ../..
