--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -65,8 +65,8 @@ jobs:
           cd ../..
       - name: Setup Hugo Modules
         run: |
-          hugo mod init github.com/ongxeno/star-citizen-handbook
           hugo mod get -u
+          hugo mod tidy
       - name: Build with Hugo
         env:
           HUGO_CACHEDIR: ${{ runner.temp }}/hugo_cache
