--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -56,6 +56,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '22'
+      - name: Install PostCSS CLI
+        run: |
+          npm install -g postcss-cli autoprefixer
       - name: Setup Hugo theme
         run: |
           mkdir -p themes
