feat: Add AI-Powered Hugo Blog Post Generator with multi-model AI workflow
- Implemented blog_generator.py for generating Thai-language blog posts for Star Citizen Handbook.
- Created README.md with detailed setup, usage instructions, and content guidelines.
- Added examples.md to showcase expected output formats for different content types.
- Introduced generate_blog.bat and generate_blog.ps1 for easy script execution on Windows and PowerShell.
- Defined requirements.txt for necessary Python packages.
- Developed setup.py for environment setup and dependency installation.
- Created test_generator.py for basic functionality tests of the generator.
- Added validate.py for quick validation of the blog generator setup.

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,9 @@ yarn.lock
 # Compiled CSS/JS (if using build tools)
 assets/css/compiled/
 assets/js/compiled/
+
+# AI Blog Generator
+generator/.env
+generator/__pycache__/
+generator/*.pyc
+generator/test_output/
