feat: Add Development section and update styles for new categories
- Introduced a new "Development" section in the navigation and content structure.
- Updated CSS styles to accommodate the new "Development" category alongside existing categories.
- Created a new index page for Development updates, including roadmap, monthly reports, and patch notes.
- Added a monthly report for July 2025 detailing AI improvements, ship updates, and gameplay mechanics.
- Refactored blog generator to support new article structure and image generation workflow.
- Removed outdated generator scripts and documentation for improved clarity and maintainability.

--- a/hugo.toml
+++ b/hugo.toml
@@ -69,6 +69,11 @@ pygmentsCodefencesGuessSyntax = true
     weight = 4
 
 [[menu.main]]
+    name = "การพัฒนาเกม"
+    url = "development/"
+    weight = 5
+
+[[menu.main]]
     name = "เกี่ยวกับ"
     url = "about/"
-    weight = 5
+    weight = 6
